{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "3df6688f-4a49-4e70-bf45-a6811b8ba075",
            "actions": [
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "aea610c9-8418-45be-ba58-7fb2f0410b1f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "400ad428-13ba-4a84-8366-f691d5018dcc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6384ade0-360f-4a56-8e24-3c0bac9876c2",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9b3745a1-2ff8-4201-8351-a8a7baba1b98",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}